<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/dialog_title"
		android:text="@string/before_enable_tips_title"
		android:textSize="24sp"
		android:layout_marginTop="10dp"
		android:layout_margin="20dp"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/dialog_message"
		android:text="@string/before_enable_tips"
		android:textSize="16sp"
		android:layout_marginRight="20dp"
		android:layout_marginLeft="20dp"/>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:padding="10dp"
		android:gravity="right">

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/dialog_ok_btn"
			android:text="@string/ok"
			android:textSize="16sp"
			android:layout_alignParentEnd="true"
			android:gravity="center"
			android:layout_marginRight="20dp"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/dialog_cancel_btn"
			android:text="@string/annulla"
			android:textSize="16sp"
			android:layout_below="@+id/dialog_ok_btn"
			android:gravity="center"
			android:layout_marginRight="20dp"
			android:layout_alignParentEnd="true"
			android:layout_marginBottom="10dp"/>

	</LinearLayout>

</LinearLayout>

