<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.elelco.mobilesales.MainActivity">
  <!--
	<item
		android:id="@+id/action_search"
		android:icon="@android:drawable/ic_menu_search"
		app:showAsAction="always"
		app:actionViewClass="android.support.v7.widget.SearchView"
		android:title="Search"/>-->
	
	
	<item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/impostazioni"
        app:showAsAction="never" />
	<item
        android:id="@+id/menuItemDb"
        android:title="Db"
		app:showAsAction="never"
	/>
	<item
		android:id="@+id/menuItemDeleteDb"
		android:title="Delete Db"
		app:showAsAction="never"
		/>
	<item android:id="@+id/action_refresh"
		android:title="@string/aggiornadb"
		android:orderInCategory="100"
		app:showAsAction="never" />

	<item android:id="@+id/action_verificaCarico"
		android:title="@string/verificaCarico"
		android:orderInCategory="100"
		app:showAsAction="never" />




	<!--<item
        android:id="@+id/menuItemPrint" 
		app:showAsAction="never"
		android:title="@string/stampa"
	/>
-->

	<item
        android:id="@+id/menuItemLogcat"
        android:title="Show Log"
		app:showAsAction="never"
	/>
</menu>
