<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="10dp">

	<TextView
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_width="match_parent"
		android:text="@string/pagamentoFattura"
		android:background="@color/colorPrimaryDark"
		android:textColor="#FFFFFF"
		android:gravity="center"
		android:padding="10dp"/>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:paddingBottom="10dp"
		android:paddingTop="20dp">

		<CheckBox
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:id="@+id/swBanca"
			android:text="@string/pagamentoBanca"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:textSize="20sp"/>

		<CheckBox
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:id="@+id/swCassa"
			android:text="@string/pagamentoCassa"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:layout_marginBottom="10dp"
			android:textSize="20sp"/>

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:width="200dp"
				android:id="@+id/LblImportoIncassato"
				android:text="@string/totalefattura"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textSize="20sp" />

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="wrap_content"
				android:text="Medium Text"
				android:gravity="right"
				android:layout_gravity="right"
				android:id="@+id/pagamentoImportoFattura"
				android:width="200dp"
				android:textSize="20sp"
				android:selectAllOnFocus="true"
				android:textColor="#000000"/>

		</LinearLayout>

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:orientation="vertical"
			android:id="@+id/pagamentoDivDaIncassare">

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:orientation="horizontal"
				>
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:text="@string/saldoPrecedente"

				android:width="200dp"
				android:textSize="20sp"
				android:id="@+id/pagamentoLblSaldo"/>
				<TextView
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:text="@string/saldoPrecedente"
					android:gravity="right"
					android:layout_gravity="right"
					android:width="200dp"
					android:textSize="20sp"
					android:textColor="#000000"
					android:id="@+id/pagamentoSaldo"/>
			</LinearLayout>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:orientation="horizontal">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:width="200dp"
					android:id="@+id/LblImportoDaIncassare"
					android:text="@string/daIncassare"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textSize="20sp" />

				<TextView
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:layout_width="wrap_content"
					android:text="Medium Text"
					android:gravity="right"
					android:layout_gravity="right"
					android:id="@+id/pagamentoImportoDaIncassare"
					android:width="200dp"
					android:textSize="20sp"
					android:selectAllOnFocus="true"
					android:textColor="#000000"/>

			</LinearLayout>
			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:orientation="horizontal"
				>
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:text="@string/importoIncassato"
				android:layout_gravity="center_vertical"
				android:width="200dp"
				android:textSize="20sp"
				android:id="@+id/pagamentoLblImportoIncassato"/>

			<EditText
				android:layout_height="wrap_content"
				android:inputType="number"
				
				android:layout_width="wrap_content"
				android:ems="10"
				android:textSize="20sp"
				android:id="@+id/pagamentoTxtImportoIncassato"
				android:width="200dp"
				android:gravity="right"
				android:textColor="#000000"/>
			</LinearLayout>

		</LinearLayout>

	</LinearLayout>

	<ImageButton
		android:id="@+id/pagamento_btnPrint"
		android:layout_height="40dp"
		android:layout_width="40dp"
		android:src="@drawable/printer"
		android:layout_centerVertical="true"
		android:layout_gravity="center"
		android:background="@color/colorAccent"
		android:padding="10dp"
		android:layout_marginTop="10dp"/>

	<Button
		android:id="@+id/pagamento_btnSave"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/fine"
		android:layout_centerVertical="true"
	/>
	
</LinearLayout>

